--- a/references.bib
+++ b/references.bib
@@ -1029,3 +1029,56 @@
 	file = {Allen_et_al_2019_Raincloud_plots.pdf:/home/amlalejini/Dropbox/Library/research-bibliography/Allen_et_al_2019_Raincloud_plots.pdf:application/pdf}
 }
 
+@article{kashtan2007varying,
+  title={Varying environments can speed up evolution},
+  author={Kashtan, Nadav and Noor, Elad and Alon, Uri},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={104},
+  number={34},
+  pages={13711--13716},
+  year={2007},
+  publisher={National Acad Sciences}
+}
+
+@article{childs2010evolutionary,
+  title={Evolutionary bet-hedging in the real world: empirical evidence and challenges revealed by plants},
+  author={Childs, Dylan Z and Metcalf, CJE and Rees, Mark},
+  journal={Proceedings of the Royal Society B: Biological Sciences},
+  volume={277},
+  number={1697},
+  pages={3055--3064},
+  year={2010},
+  publisher={The Royal Society}
+}
+
+
+@article{leroi_temperature_1994,
+	title = {Temperature acclimation and competitive fitness: an experimental test of the beneficial acclimation assumption.},
+	volume = {91},
+	issn = {0027-8424, 1091-6490},
+	shorttitle = {Temperature acclimation and competitive fitness},
+	url = {http://www.pnas.org/cgi/doi/10.1073/pnas.91.5.1917},
+	doi = {10.1073/pnas.91.5.1917},
+	number = {5},
+	urldate = {2021-05-05},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Leroi, A. M. and Bennett, A. F. and Lenski, R. E.},
+	month = mar,
+	year = {1994},
+	pages = {1917--1921}
+}
+
+@article{lahti_relaxed_2009,
+	title = {Relaxed selection in the wild},
+	volume = {24},
+	issn = {01695347},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0169534709001505},
+	doi = {10.1016/j.tree.2009.03.010},
+	number = {9},
+	urldate = {2021-04-17},
+	journal = {Trends in Ecology \& Evolution},
+	author = {Lahti, David C. and Johnson, Norman A. and Ajie, Beverly C. and Otto, Sarah P. and Hendry, Andrew P. and Blumstein, Daniel T. and Coss, Richard G. and Donohue, Kathleen and Foster, Susan A.},
+	month = sep,
+	year = {2009},
+	pages = {487--496}
+}
