--- a/tex/data-availability.tex
+++ b/tex/data-availability.tex
@@ -3,4 +3,4 @@
 
 \section*{Data Availability Statement}
 
-% The datasets [GENERATED/ANALYZED] for this study can be found in the [NAME OF REPOSITORY] [LINK].
+The datasets generated and analyzed for this study can be found on the Open Science Framework at \url{https://osf.io/sav2c/} \citep{osf_data}.
