--- a/tex/figures/evolutionary-change-pace-panel.tex
+++ b/tex/figures/evolutionary-change-pace-panel.tex
@@ -6,7 +6,7 @@
     \textbf{Pace of evolutionary change.}
     Raincloud plots of 
     (a) average number of generations between coalescence events,
-    and (b) mutational stability (Table \ref{tab:metrics-definitions}).
+    and (b) realized mutational robustness (Table \ref{tab:metrics-definitions}).
     Each plot is annotated with statistically significant comparisons (Bonferroni-corrected pairwise Wilcoxon rank-sum tests).
     }
     \label{fig:evolutionary-dynamics-rate}
