--- a/tex/funding.tex
+++ b/tex/funding.tex
@@ -1,3 +1,10 @@
 % Details of all funding sources should be provided, including grant numbers if applicable. Please ensure to add all necessary funding information, as after publication this is no longer possible.
 
 \section*{Funding}
+
+% This work was supported by funding from TODO
+TODO
+% AL: Michigan State University (UDF), DGE-1424871
+% AJF
+% NG
+% CO
