--- a/tex/results.tex
+++ b/tex/results.tex
@@ -5,11 +5,7 @@
 
 \section{Results}
 
-% Go through results, ask what the reader should be thinking about to 
-
-\subsection{The evolution of adaptive phenotypic plasticity slows evolutionary change in fluctuating environments}
-
-% \input{tex/figures/evolutionary-change-panel}
+\subsection{Adaptive phenotypic plasticity slows evolutionary change in fluctuating environments}
 
 \input{tex/figures/evolutionary-change-magnitude-panel}
 
@@ -67,7 +63,7 @@
 %  - Mutation accumulation
 %  - Phenotypic volatility
 In experimental \hyperref[sec:methods:exp:evolutionary-change-rate]{phase 2A},
-we tested whether the evolution of adaptive phenotypic plasticity constrained or promoted subsequent evolutionary change in a fluctuating environment. 
+we tested whether adaptive phenotypic plasticity constrained or promoted subsequent evolutionary change in a fluctuating environment. 
 First, we compared the total amount of evolutionary change in populations evolved under the PLASTIC, NON-PLASTIC, and STATIC treatments as measured by coalescence event count, mutation count, and phenotypic volatility (Figure \ref{fig:evolutionary-dynamics-magnitude}).
 According to each of these metrics, NON-PLASTIC populations experienced a larger magnitude of evolutionary change than either PLASTIC or STATIC populations.
 We observed significantly higher coalescence event counts in NON-PLASTIC populations than in PLASTIC or STATIC populations (Figure \ref{fig:evolutionary-dynamics-magnitude}\hyperref[fig:evolutionary-dynamics-magnitude]{a}).
@@ -78,44 +74,56 @@ Changing environments have been shown to increase generational turnover in Avida
 Indeed, we found that significantly more generations of evolution elapsed in NON-PLASTIC populations (mean of $41090\pm2702$ std. dev.) than in PLASTIC (mean of $31016\pm2615$ std. dev.) or STATIC (mean of $30002\pm3011$ std. dev.) populations during phase 2A (corrected Wilcoxon rank-sum tests, p $<10^{-4}$).
 
 % -- Rate of evolutionary change => intuition --
-To evaluate whether increased generational turnover explains the greater magnitude of evolutionary change in NON-PLASTIC populations, we examined the average number of generations between coalescence events and the mutational stability of lineages (Table \ref{tab:metrics-definitions}).
+To evaluate whether increased generational turnover explains the greater magnitude of evolutionary change in NON-PLASTIC populations, we examined the average number of generations between coalescence events and the realized mutational robustness of lineages (Table \ref{tab:metrics-definitions}).
 A coalescence event indicates a selective sweep, which is a hallmark of adaptive evolutionary change.
-Mutational stability measures the frequency that mutations cause phenotypic changes along a lineage.
-We expect that static conditions should favor fit lineages with high mutational stability that no longer undergo rapid adaptive change and hence do not trigger frequent coalescence events.
-Under fluctuating conditions, however, lineages must be composed of plastic organisms if they are to maintain high fitness and mutational stability.
-Without plasticity, we expect these conditions to produce lineages with low stability and frequent coalescence events as populations must continually readapt.
+Realized mutational robustness measures the frequency that mutations cause phenotypic changes along a lineage.
+We expect that static conditions should favor fit lineages with high realized mutational robustness that no longer undergo rapid adaptive change and hence do not trigger frequent coalescence events.
+Under fluctuating conditions, however, lineages must be composed of plastic organisms if they are to maintain both high fitness and realized mutational robustness.
+Without plasticity, we expect fluctuating conditions to produce lineages with low realized mutational robustness and frequent coalescence events as populations must continually readapt.
 
-% --- BOOKMARK ---
 \input{tex/figures/evolutionary-change-pace-panel}
 
 % -- Rate of evolutionary change => findings --
 On average, significantly fewer generations elapsed between coalescence events in NON-PLASTIC populations than in either PLASTIC or STATIC populations (Figure \ref{fig:evolutionary-dynamics-rate}a).
-% We also observed that PLASTIC and STATIC lineages had significantly higher genotypic and phenotypic fidelity than NON-PLASTIC lineages (Figure \ref{fig:evolutionary-dynamics}e and \ref{fig:evolutionary-dynamics}f, respectively); that is, offspring were identical to their parent more often in the PLASTIC and STATIC regimes than in the NON-PLASTIC regime.
-We also found that both STATIC and PLASTIC lineages exhibited higher mutational stability relative to that of NON-PLASTIC lineages (Figure \ref{fig:evolutionary-dynamics-rate}b); that is, mutations more often caused phenotypic changes along NON-PLASTIC lineages. 
-Overall, our results indicate that NON-PLASTIC populations underwent more rapid (and thus a greater amount of) evolutionary changes than either PLASTIC or STATIC populations. 
+We also found that both STATIC and PLASTIC lineages exhibited higher realized mutational robustness relative to that of NON-PLASTIC lineages (Figure \ref{fig:evolutionary-dynamics-rate}b); that is, mutations observed along NON-PLASTIC lineages more often caused phenotypic changes in offspring. 
+Overall, our results indicate that NON-PLASTIC populations underwent more rapid (and thus a greater amount of) evolutionary change than either PLASTIC or STATIC populations. 
 
 % -- Mutational stability in static and plastic lineages --
-While both STATIC and PLASTIC lineages both exhibited high mutational stability, we found that STATIC lineages exhibited higher mutational stability than PLASTIC lineages (Figure \ref{fig:evolutionary-dynamics-rate}b). 
-Overall, there were few instances of mutations that caused a change in phenotypic profile across all PLASTIC lineages.
-However, of these mutations, we found that over 80\% (83 out of 102) of changes to phenotypic profiles were cryptic, as they occurred in traits that would not have been expressed when the organism was alive but would have been expressed if the environment changed.
+While both STATIC and PLASTIC lineages exhibited high realized mutational robustness, we found that STATIC lineages exhibited higher robustness than PLASTIC lineages (Figure \ref{fig:evolutionary-dynamics-rate}b). 
+Overall, there were rare instances of mutations that caused a change in phenotypic profile across all PLASTIC lineages.
+Of these mutations, we found that over 80\% (83 out of 102) of changes to phenotypic profiles were cryptic. 
+That is, the mutations affected traits that would not have been expressed in the environment that the organism was born into but would have been expressed had the environment changed.
 
-\input{tex/figures/architecture_locus_functionality}
-\input{tex/figures/architecture_locus_change_time}
+%\input{tex/figures/architecture/architecture_locus_functionality}
+%\input{tex/figures/architecture/architectural_volatility}
+%\input{tex/figures/architecture/architecture_panel}
+\input{tex/figures/mutational_robustness}
 
-% -- genetic architectures --
-Next, we performed knockout experiments to investigate how genetic architectures evolved under the PLASTIC, NON-PLASTIC, and STATIC treatment regimes.
-Figure \ref{fig:architecture_locus_functionality} shows the functionality of each locus in the most abundant genotype of the final population, using a representative sample from each treatment. 
-PLASTIC and STATIC genomes perform tasks in both environments, while the NON-PLASTIC genome only performs tasks in the B environment.
-We see substantial vestigial task machinery in environment A for the NON-PLASTIC genome, indicating that the genome previously performed environment A tasks but some other locus changed to ``switch off'' those tasks while leaving the sites intact.  
-Indeed, Figure \ref{fig:architecture_locus_change_time} demonstrates that, when looking at locus functionality over an entire lineage, loci change function significantly faster (and thus more often) in the NON-PLASTIC treatment [stats].
-%This supports our hypothesis that NON-PLASTIC populations rely on [genetic re-adaptation] to [keep up with] the changing environment, while the PLASTIC and STATIC treatments have relatively fixed architecture. 
-This supports our hypothesis that the fluctuating environment forces NON-PLASTIC populations to rely on mutations to continuously readapt, while organisms that are adaptively plastic change their phenotype according to environmental stimuli and thus do not require genetic changes to readapt. 
+% -- mutational landscaping --
+% Thus far, our analyses have focused on dominant lineage.
+% What about mutations off the line of descent? 
+% Mutational stability result is NOT due to random mutations being more likely to induce phenotypic change. 
+% KEY: Motivation for looking at mutational neighborhoods needs to made very clear here
+%   - Why not look at mutational neighborhoods for the other experiments?
+Given that NON-PLASTIC lineages exhibited the lowest realized mutational robustness of our three experimental treatments, we sought to determine if this effect was driven by differences in evolved genetic architectures.
+Specifically, did the NON-PLASTIC genetic architectures evolve such that mutations were more likely to result in phenotypic change?
+Such a  mutational bias would trade off descendant fitness in the same environment in exchange for a chance of increasing descendant fitness in alternate environments.
+This strategy would be an example of diversifying bet-hedging (\textit{i.e.}, reducing expected mean fitness to lower variance in fitness) \citep{childs2010evolutionary}.
+Alternatively, the lower realized mutational robustness in NON-PLASTIC lineages could be due to survivorship bias, as we measured realized mutational robustness as the fraction of mutations observed along \textit{successful} lineages that caused a phenotypic change. 
+%(\textit{i.e.}, the lineages of extant organisms) 
+
+
+We analyzed the mutational robustness of representative genotypes by calculating the fraction of single-instruction mutations that change the phenotypic profile.
+We found that mutations to genotypes on NON-PLASTIC lineages are \textit{less} likely to result in a phenotypic change than mutations to genotypes on either STATIC or PLASTIC lineages (Figure \ref{fig:neighborhood-mutational-stability}).
+These data provide evidence against NON-PLASTIC lineages engaging in a mutation-driven bet-hedging strategy, and instead, are consistent with the hypothesis that lower realized mutational robustness in the NON-PLASTIC treatment was due to survivorship bias.
+% @AML: Maybe one more sentence elaborating on implication of survivorship bias?
+
 
 
 % -- in general, PLASTIC and STATIC more similar than NON-PLASTIC --
-In general, the evolution of adaptive plasticity stabilized PLASTIC treatment populations against environmental fluctuations, and their evolutionary dynamics more closely resembled those of populations evolving in a static environment.
+In general, adaptive plasticity stabilized PLASTIC treatment populations against environmental fluctuations, and their evolutionary dynamics more closely resembled those of populations evolving in a static environment.
 We observed no significant difference in the number and frequency of coalescence events in PLASTIC and STATIC populations.
-We did, however, observe small, but statistically significant, differences in each of elapsed generations, mutation counts, and mutational stability between PLASTIC and STATIC populations (see supplemental material \citealt{supplemental_material}).
+We did, however, observe small, but statistically significant, differences in each of the following metrics: elapsed generations, mutation counts, realized mutational robustness, and architectural volatility between PLASTIC and STATIC populations (see supplemental material \citealt{supplemental_material}).
 
 \vspace{0.5cm}
 \subsection{Adaptively plastic populations retain more novel tasks than non-plastic populations in fluctuating environments}
@@ -146,61 +154,40 @@ We did, however, observe small, but statistically significant, differences in ea
 
 \input{tex/figures/novel-tasks-magnitude-panel}
 
-% [Environmental change has been shown to drive evolutionary change and promote evolutionary exploration in non-plastic populations as compared to populations evolving in an unchanging environment \citep{zaman_coevolution_2014,nahum_improved_2017}.]
-% [If so, does adaptive plasticity negate the [effects of environmental change on evolutionary exploration]? 
-
 % -- What did we test? --
-In experimental phase 2B, we evaluated how evolution of adaptive phenotypic plasticity influences the ability of populations to evolve and retain novel adaptive traits.
-We have shown that adaptive plasticity constrains the rate of evolutionary change in fluctuating environments.
+%In experimental phase 2B, we evaluated how evolution of adaptive phenotypic plasticity influences the ability of populations to evolve and retain novel adaptive traits. Commented out by Nkrumah... 
+We have so far shown that adaptive plasticity constrains the rate of evolutionary change in fluctuating environments.
 However, it is unclear how this dynamic influences the evolution of novel tasks.
 Based on their relative rates of evolutionary change, we might expect NON-PLASTIC-treatment populations to evolve more novel tasks than PLASTIC-treatment populations.
-But, how much of the evolutionary change in NON-PLASTIC-treatment populations is useful for exploring novel regions of the fitness landscape versus repeatedly re-treading previously explored regions of the fitness landscape?
+But, how much of the evolutionary change in NON-PLASTIC populations is useful for exploring novel regions of the fitness landscape versus continually rediscovering the same regions?
 
 % - Magnitude of exploration/exploitation -
-%   - task performance
-%   - task discovery
-%   - task loss
-% Adaptive phenotypic plasticity evolved in \novelTraitsPlasticReps\ of \novelTraitsReplicates\ replicates from the PLASTIC treatment during phase one of Experiment II; we used this more limited group to seed the \novelTraitsPlasticReps\ phase-two PLASTIC replicates.
-Figure \ref{fig:complex-traits-magnitude} shows the final novel task count, novel task discovery, and novel task loss for the PLASTIC, NON-PLASTIC, and STATIC treatments.
-Final novel task count measures the number of novel tasks performed by a representative organism in the final population of each replicate, which indicates how well the final population exploits the fitness landscape.
-Novel task discovery is the number of types of novel tasks ever performed by an organism along a representative lineage, which sheds light on how well lineages explore the fitness landscape. 
-Finally, novel task loss is the number of times along a representative lineage that a novel task is performed by a parent but not its offspring, which measures a lineage's capacity to maintain novel tasks. 
-
-We found that both PLASTIC and STATIC populations had significantly higher final task counts than NON-PLASTIC populations at the end of the experiment (Figure~\ref{fig:complex-traits-magnitude}a).
-This, however, was not due to PLASTIC and STATIC lineages exploring a larger breadth of the fitness landscape, as NON-PLASTIC lineages exhibited significantly higher novel task discovery than either PLASTIC or STATIC lineages (Figure~\ref{fig:complex-traits-magnitude}b).
-Indeed, we found that NON-PLASTIC lineages repeatedly failed to retain evolved novel tasks, exhibiting significantly higher novel task loss than either PLASTIC or STATIC lineages (Figure~\ref{fig:complex-traits-magnitude}c).
+To answer this question, we quantified the number of novel tasks performed by a representative organism in the final population of each replicate.
+We found that both PLASTIC and STATIC populations had significantly higher final task counts than NON-PLASTIC populations at the end of the experiment (Figure~\ref{fig:complex-traits-magnitude}a). 
+The final novel task count in PLASTIC and STATIC lineages could be higher than that of the NON-PLASTIC lineages for several non-mutually exclusive reasons. 
+One possibility is that PLASTIC and STATIC lineages could be exploring a larger area of the fitness landscape when compared to NON-PLASTIC lineages. 
+Another possibility is that the propensity of the NON-PLASTIC lineages to maintain novel traits could be significantly lower than PLASTIC or STATIC lineages. 
+When we looked at the total sum of novel tasks discovered by each of the PLASTIC, STATIC, and NON-PLASTIC lineages, we found that the NON-PLASTIC lineages explored a significantly larger area of the fitness landscape (Figure~\ref{fig:complex-traits-magnitude}b).
+Although the NON-PLASTIC lineages discovered more novel tasks, those lineages also exhibited significantly higher novel task loss when compared to PLASTIC and STATIC lineages (Figure~\ref{fig:complex-traits-magnitude}c). 
 
 \input{tex/figures/novel-tasks-rate-panel}
 
 % - Rates of exploration/exploitation -
-%  - tasks discovered per generation(?)
-%  - tasks lost per generation(?)
-As noted previously, a larger number of generations elapsed in NON-PLASTIC populations than in PLASTIC or STATIC populations during our experiment.
+A larger number of generations elapsed in NON-PLASTIC populations than in PLASTIC or STATIC populations during our experiment \cite{supplemental_material}.
 Are NON-PLASTIC lineages discovering and losing novel tasks more frequently than PLASTIC or STATIC lineages, or are our observations a result of differences in generational turnover?
-To tease this apart, we examined the frequencies of novel task discovery and novel task loss along representative lineages by dividing novel task discovery and novel task loss measurements by the number of elapsed generations.
+To answer this question, we converted the metrics of novel task discovery and novel task loss to rates by dividing each metric by the number of elapsed generations along the associated representative lineages.
 We found no significant difference in the frequency of novel task discovery between NON-PLASTIC and STATIC lineages, and we found that PLASTIC lineages had a lower frequency of novel task discovery than STATIC lineages (Figure~\ref{fig:complex-traits-rate}a).
 Therefore, we cannot reject the possibility that the larger magnitude of task discovery in NON-PLASTIC lineages was driven by a larger number of elapsed generations.
 NON-PLASTIC lineages had a higher frequency of task loss than either PLASTIC or STATIC lineages, and PLASTIC lineages tended to have a lower frequency of novel task loss than STATIC lineages (Figure~\ref{fig:complex-traits-rate}b). 
 
-% We computed the per-generation rate of task discovery along dominant lineages and the per-generation rate of task loss along those same lineages.
-% small, but significant, per-generation task discovery rate than NON-PLASTIC or STATIC lineages [stats].
-% We found that NON-PLASTIC lineages had a significantly higher per-generation rate of task loss than either PLASTIC or STATIC lineages [stats], while PLASTIC lineages had a small but significantly lower per-generation rate of task loss than STATIC lineages [stats].
-% Indeed, we found that NON-PLASTIC lineages repeatedly gained and failed to retain novel tasks during the experiment, and the final evolved genotypes performed fewer overall tasks.
 
 % - Characterizing trait loss -
-%   - fraction of novel trait loss co-occuring with change in base trait profile
-%   - reporting overall aggregate vs. comparing distributions of fractions (among lineages that have trait loss)
-% @AML: [Some rationale for doing this???]
-Next, we examined the frequency at which novel task loss along lineages co-occurred with a change in base task performance (\textit{i.e.}, the loss or gain of any of the six base tasks).
-Across all NON-PLASTIC dominant lineages, over 97\% (10998 out of 11229) of instances of novel task loss co-occurred with a simultaneous change in base task profile.
-In contrast, across all PLASTIC and STATIC dominant lineages, we observed that approximately 20\% (29 out of 142) and 2\% (13 out of 631), respectively, of instances of novel task loss co-occurred with a simultaneous change in base task profile. 
+Next, we examined the frequency at which novel task loss along lineages co-occurred with the loss or gain of any of the six base tasks.
+Across all NON-PLASTIC representative lineages, over 97\% (10998 out of 11229) of instances of novel task loss co-occurred with a simultaneous change in base task profile.
+In contrast, across all PLASTIC and STATIC dominant lineages, we observed that approximately 20\% (29 out of 142) and 2\% (13 out of 631), respectively, of instances of novel task loss co-occurred with a simultaneous change in base task profile.
+As such, the losses of novel tasks in NON-PLASTIC lineages appear to be primarily due to hitchhiking.
 
-% In supplemental experiments, we did find that the relative value of fluctuating and novel tasks affected novel task discovery and retention [cite supplement]. 
-% While the overall patterns that we observed were consistent, 
-% [Limitation (relative value): in supplemental experiments, relative value of fluctuating and novel tasks affects novel task retention, the stronger directional selection on fluctuation tasks relative to selection on novel tasks makes novel tasks harder to maintain because less deleterious to lose novel trait].
-
-\vspace{0.5cm}
-\subsection{Non-plastic lineages accumulate more deleterious instructions in fluctuating environments}
+\subsection{Lineages without plasticity that evolve in fluctuating environments express more deleterious tasks}
 
 %%%%%%
 % 2021-02-05 - Results
@@ -214,39 +201,30 @@ In contrast, across all PLASTIC and STATIC dominant lineages, we observed that a
 %   - Not much hitchhiking. Did not find evidence that hitchiking occurring as cryptic variation in unexpressed phenotype.
 %%%%%%
 
-% -- what we tested --
-% [todo]
-% We have shown that adaptive plasticity stabilized populations against environmental fluctuations, which reduced novel trait loss along the lineages of adaptively plastic organisms relative to that of non-plastic organisms. 
+Phenotypic plasticity allows for genetic variation to accumulate in genomic regions that are unexpressed, which could lead to the fixation of deleterious instructions in PLASTIC populations.
+However, in NON-PLASTIC lineages we observe a higher rate of novel task loss, indicating that they may be more susceptible to deleterious mutations (Figure \ref{fig:complex-traits-rate}).
 
+Therefore, in experiment phase 2C, we tested whether adaptive phenotypic plasticity can increase the incidence of deleterious task performance. 
+Specifically, we added an instruction that triggered a ``poisonous'' task and measured the number of times it was executed.
+Each execution of the  \code{poison} instruction reduces an organism's fitness by 10\%. 
 
-
-
-% @AML: needs trimming
-% the lineages of adaptively plastic organisms accumulate more deleterious \code{poison} instructions than that of non-plastic lineages.
-Phenotypic plasticity allows for possibility of accumulating of genetic variation in genomic regions that are unexpressed under contemporary environmental conditions, which could lead to the fixation of deleterious instructions in PLASTIC-treatment populations.
-However, our results thus far indicate that PLASTIC-treatment populations accumulate \textit{fewer} deleterious mutations than NON-PLASTIC treatment populations in fluctuating environments.
-That is, NON-PLASTIC lineages accumulated more total genetic changes (Figure \ref{fig:evolutionary-dynamics-magnitude}), and the high rates of novel task loss in NON-PLASTIC lineages (Figure \ref{fig:complex-traits-rate}) may also indicate their increased susceptibility to accumulating deleterious mutations relative to PLASTIC lineages.
-
-In experimental phase 2C, we tested whether the evolution of adaptive phenotypic plasticity increases deleterious instruction accumulation in genomes by measuring poisonous task performance in representative organisms and along representative lineages. 
-Organisms can perform the poisonous task by executing a \code{poison} instruction, which reduces their fitness. 
-At the beginning of phase two, the \code{poison} instruction is not present in the population as it was not part of the instruction set during the first phase of evolution.
-If a \code{poison} instruction fixes in a population, it must be the result of evolutionary dynamics during phase 2C, as no founding organism's genome contained the \code{poison} instruction.
-Selection should purge mutations that increase \code{poison} instruction execution in the offspring phenotype, unless those mutations accumulate as cryptic variation in plastic genomes or hitchhike to fixation with linked beneficial mutations.
+At the beginning of phase 2C, the \code{poison} instruction is not present in the population, as it was not part of the instruction set during phase one of evolution.
+Accordingly, if a \code{poison} instruction fixes in a population, it must be the result of evolutionary dynamics during phase 2C, including cryptic variation or hitchhiking. 
 
 \input{tex/figures/poison-accumulation-panel}
 
 % -- Instruction execution by final dominant & along lineage --
-At the end of our experiment, no representative organisms from the PLASTIC or STATIC treatments performed the poisonous task under any environmental condition; however, representative organisms from 14 replicates of the NON-PLASTIC treatment performed the poisonous task at least once. % (statistically significant, fisher's exact test)
-Figure \ref{fig:deleterious-hitchhiking} shows the poisonous task acquisition rate for each treatment, which measures the number of instances along a lineage where a mutation causes an offspring to perform the poisonous task more often than its parent. 
-We found that NON-PLASTIC lineages contained significantly more offspring that performed the poisonous task more often than their parent as compared to offspring along PLASTIC or STATIC lineages (\ref{fig:deleterious-hitchhiking}a).
-This result does not change when we normalize each poisonous task acquisition value by the number of generations represented in the given lineage (Figure \ref{fig:deleterious-hitchhiking}b).
+At the end of our experiment, no representative organisms from the PLASTIC or STATIC treatments performed the poisonous task under any environmental condition; however, representative organisms in 14\% of replicates of the NON-PLASTIC treatment performed the poisonous task at least once. 
+NON-PLASTIC lineages contained significantly more mutations that conferred the poisonous task as compared to PLASTIC or STATIC lineages (Figure \ref{fig:deleterious-hitchhiking}a), and these mutations occurred at a significantly higher frequency on NON-PLASTIC lineages (Figure \ref{fig:deleterious-hitchhiking}b).
+% Additionally, we did not observe 
+% This result does not change when we normalize [what?] by the number of generations represented in the given lineage (Figure \ref{fig:deleterious-hitchhiking}b).
 
 % -- When/where does hitchhiking take place? --
-% @AML: Could use a little transition here!
-Next, we examined the frequency that mutations that increase \code{poison} execution co-occurred with mutations that change the base task profile of offspring along representative lineages.
-Across all NON-PLASTIC representative lineages, we found that approximately 49\% (956 out of 1916) mutations that increased \code{poison} instruction execution co-occurred with mutations that changed the base task profile.
-Along all representative lineages from the PLASTIC treatment, only 18 offspring sustained a mutation that increased task poisonous task performance relative to their parent, and none of these mutations simultaneously co-occurred with a change in base task profile.
-Likewise, along all representative lineages from the STATIC treatment, only 58 offspring sustained a mutation that increased poisonous task performance, and none of these mutations simultaneously co-occurred with a change in base task profile.
-We did not find compelling evidence that the few mutations that increased \code{poison} task performance occurred as cryptic variation in PLASTIC lineages.
+Next, we measured how often mutations that increased poisonous task performance co-occurred with changes to the base task profile within representative lineages.
+A poisonous instruction can fix in a lineage by having a beneficial effect that outweighs its inherent cost (\textit{e.g.}, knocking out a punished task) or through linkage with a secondary beneficial mutation at another site within in the genome.
+Across all NON-PLASTIC representative lineages, we found that approximately 49\% (956 out of 1916) of mutations that increased poisonous task expression co-occurred with a change in the base task profile (Figure \ref{fig:deleterious-hitchhiking}c).
+In all representative lineages from the PLASTIC treatment, only 18 mutations increased poisonous task expression, and none co-occurred with a change in base task profile (Figure \ref{fig:deleterious-hitchhiking}c).
+Likewise, only 58 mutations increased poisonous task performance in all representative lineages from the STATIC treatment, and none co-occurred with a change in base task profile (Figure \ref{fig:deleterious-hitchhiking}c).
+We did not find compelling evidence that the few mutations that increased poisonous task expression occurred as cryptic variation in PLASTIC lineages.
 
-We repeated this experiment with 3\% and 30\% metabolic rate penalties associated with the poisonous task, which produced consistent experimental results \citep{supplemental_material}.
+We repeated this experiment with 3\% and 30\% metabolic rate penalties associated with the poisonous task, which produced results that were consistent with those reported here \citep{supplemental_material}.
