--- a/tex/supplemental-material.tex
+++ b/tex/supplemental-material.tex
@@ -1,5 +1,7 @@
 
 % \href{http://home.frontiersin.org/about/author-guidelines#SupplementaryMaterial}{Supplementary Material} should be uploaded separately on submission, if there are Supplementary Figures, please include the caption in the same file as the figure. LaTeX Supplementary Material templates can be found in the Frontiers LaTeX folder.
 
-\section*{Supplemental Data}
+\section*{Supplemental Material}
+
+The supplemental material for this article is hosted on GitHub and can be found online at \url{https://github.com/amlalejini/evolutionary-consequences-of-plasticity} \citep{supplemental_material}.
  
