--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -12,18 +12,20 @@
 \section{}
 Fluctuating environmental conditions are ubiquitous in natural systems, and the particular mechanisms that populations rely on to cope with environmental fluctuations profoundly influence subsequent evolutionary dynamics.
 Phenotypic plasticity, the ability of a single genotype to produce alternate phenotypes, allows organisms to dynamically adjust phenotypic expression in an environmentally dependent context.
-Here, we use digital organisms (self-replicating computer programs) to investigate how the evolution of adaptive phenotypic plasticity alters evolutionary dynamics and influences evolutionary outcomes in cyclically changing environments.
+Here, we use digital organisms (self-replicating computer programs) to investigate how adaptive phenotypic plasticity alters evolutionary dynamics and influences evolutionary outcomes in cyclically changing environments.
 Specifically, we 
-(1) examined the evolutionary histories of plastic and non-plastic populations to test whether the evolution of adaptive plasticity promotes or constrains subsequent evolutionary change;
+(1) examined the evolutionary histories of plastic and non-plastic populations to test whether adaptive plasticity promotes or constrains subsequent evolutionary change;
 (2) evaluated how adaptive plasticity influences fitness landscape exploration and exploitation by testing whether plastic populations are better able to evolve and then maintain novel traits;
-and (3) tested if the evolution of adaptive plasticity increases the potential for deleterious [alleles/genes] to accumulate in evolving genomes.
-We find that populations with adaptive phenotypic plasticity evolve more slowly than non-plastic populations, which rely on genetic variation from \textit{de novo} mutations to continuously re-adapt to the environment.
-The non-plastic populations undergo more frequent selective sweeps, accumulate many more genetic changes, [finish listing big results]. 
+and (3) tested if the evolution of adaptive plasticity increases the potential for maladaptive traits to accumulate in evolving genomes.
+We find that populations with adaptive phenotypic plasticity evolve more slowly than non-plastic populations, which rely on genetic variation from \textit{de novo} mutations to continuously readapt to the environment.
+The non-plastic populations undergo more frequent selective sweeps and accumulate many more genetic changes.
+% , [finish listing big results]. 
 We find that phenotypic plasticity stabilizes populations against environmental fluctuations; whereas the repeated selective sweeps in non-plastic populations drive the loss of beneficial traits via deleterious hitchhiking.  
 As such, plastic populations are more likely to retain novel adaptive traits than their non-plastic counterparts. 
+In general, the evolution of adaptive phenotypic plasticity shifted evolutionary dynamics to be more similar to that of populations evolving in a static environment than to populations evolving in an identical fluctuating environment. 
 All natural environments subject populations to some form of change; our findings suggest that the stabilizing effect of phenotypic plasticity plays an important role in subsequent adaptive evolution.
 
-[Indeed, the evolution of phenotypic plasticity shifted many dynamics to be more similar to populations evolving in a static environment than that of non-plastic populations evolving].
+% [Indeed, the evolution of phenotypic plasticity shifted many dynamics to be more similar to populations evolving in a static environment than that of non-plastic populations evolving].
 
 % To our knowledge, this study is the first in-depth empirical investigation into how the \textit{de novo} evolution of adaptive plasticity shifts the course of subsequent evolution; we intend for this work to demonstrate the value of digital evolution in .....
 
