--- a/tex/figures/experimental-design.tex
+++ b/tex/figures/experimental-design.tex
@@ -3,16 +3,19 @@
     \includegraphics[width=1\textwidth]{media/experimental-design.pdf}
     \caption{\small
     \textbf{Overview of experimental design.}
-    Panel a shows the three environments used in every experiment and whether they reward or punish each base task. 
-    Additionally, the last two subplots in (a) show the additional tasks added in Phases 2B and 2C. 
-    All novel tasks confer a 10\% metabolic reward, while executing the \code{poison} task causes a 10\% metabolic punishment. 
-    Panel b shows how treatments are defined and the phase transition. 
-    Treatments are defined on the left, with each treatment consisting of an environment timeline and whether sensors are functional. 
-    This also shows Phase 1, the preconditioning phase.  
-    We conducted experiments using three different second phases, as shown on the right. 
-    Phase 1 is repeated for \textit{each} Phase 2, with 100 populations of each treatment. 
-    All STATIC and NONPLASTIC replicates move on to Phase 2, while PLASTIC populations are only continued if their most abundant genotype exhibits optimal plasticity. 
-    Metrics are recorded only in Phase 2. 
+    The first three plots in panel (a) show the environments used in every experiment and whether they reward or punish each base task. 
+    Additionally, the last two subplots in (a) show the additional tasks added in phases 2B and 2C. 
+    All novel tasks confer a 10\% metabolic reward, while executing the poisonous task causes a 10\% metabolic punishment (bars not drawn to size). 
+    Panel (b) shows treatment differences and experiment phases. 
+    Treatments are listed on the left, with each treatment consisting of an environment timeline and whether sensors are functional. 
+    % This also shows Phase 1, the preconditioning phase.  
+    We conducted three independent two-phase experiments, each described on the right.
+    % We conducted experiments using three different second phases, as shown on the right. 
+    Phases 2B and 2C are textured to match their task definitions in panel (a). 
+    Phase one is repeated for \textit{each} experiment with 100 replicate populations per treatment per experiment. 
+    For each replicate at the end of phase one, we used an organism of the most abundant genotype to found the second phase population. 
+    All STATIC and NON-PLASTIC populations move on to phase two, but PLASTIC populations only continue to the second phase if their most abundant genotype exhibits optimal plasticity. 
+    Metrics are recorded only in phase two.
     }
     \label{fig:experimental-design}
 \end{figure}
