--- a/tex/figures/reaction-norms.tex
+++ b/tex/figures/reaction-norms.tex
@@ -8,11 +8,11 @@
     In each of the four reaction norm scenarios, populations are well-adapted to E$_1$.
     In (a), genotypes in the population are non-plastic, and as such, we would expect strong directional selection on mutations that move phenotypes toward O$_{\text{E}2}$ after the environment changes.
     In (b), genotypes in the population are adaptively plastic. 
-    That is, phenotypic changes induced by the environment change to E$_2$ are near the optimum, and as such, we would expect this population to remain relatively stable after the environment changes.
+    That is, phenotypic changes induced by the environment change to E$_2$ are already near the optimum, and as such, we would expect this population to remain relatively stable after the environment changes.
     In (c), the population exhibits non-adaptive plasticity with substantial variation in how individuals respond to the environmental change. 
     In this case, we expect plasticity to result in a rapid evolutionary response to the change in environment.  
     In (d), the population exhibits maladaptive plasticity relative to the given environmental change. 
-    When the environment changes, there is little variation for selection to act on, and without beneficial mutations, this population may be at risk of extinction due to their maladaptive plastic response to the environment.
+    When the environment changes, there is little variation for selection to act on, and without beneficial mutations, this population may be at risk of extinction due to their maladaptive plastic response.
     }
     \label{fig:reaction-norms}
 \end{figure}
