--- a/tex/methods.tex
+++ b/tex/methods.tex
@@ -3,18 +3,6 @@
 % This section may be divided by subheadings and should contain sufficient detail so that when read in conjunction with cited references, all procedures can be repeated. For experiments reporting results on animal or human subject research, an ethics approval statement should be included in this section (for further information, see the Bioethics section.)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Questions for 2021-03-09
-% - How should we structure: Experimental Design => Results => Discussion
-%   - We conducted 3 separate experiments. Currently, we discuss each experiment separately across sections. (1) do we want to stick to this structure? (2) if so, what should the headings be?
-% - What parts of what is currently experimental design belong in methods vs. results. vs discussion?
-%   - I 100% want to provide some intuition about measurements (in the paper), but where? I'd like trainees to be able to read this as easily as possible. 
-% - I do actually think the details for the metrics/measurements are important. 
-% - Discuss the overall flow of the methods section. Should the 'quantifying tape of life' metrics actually be under experiment 1 since that's what they are relevant to?
-% - I think we could combine results and discussion? Other major re-organizations?
-% - 'mutation accumulation'
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \section{Materials and Methods}
 
 \subsection{The Avida Digital Evolution Platform}
@@ -22,11 +10,9 @@
 % -- Define digital organisms --
 Avida is a study system wherein self-replicating computer programs (digital organisms) compete for space on a finite toroidal grid \citep{ofria_avida:_2009}.
 Each digital organism is defined by a linear sequence of program instructions (its genome) and a set of virtual hardware components used to interpret and express those instructions. 
-% Avida tracks each organism as it expresses its genome in a given environment in order to measure that organism's phenotype.
-Genomes are expressed sequentially except when the execution of one instruction deterministically changes which instruction should be executed next (\textit{e.g.}, a ``jump'' instruction). 
+Genomes are expressed sequentially except when the execution of one instruction (\textit{e.g.}, a ``jump'' instruction) deterministically changes which instruction should be executed next. 
 Genomes are built using an instruction set that is both robust (\textit{i.e.}, any ordering of instructions is syntactically valid, though not necessarily meaningful) and Turing Complete (\textit{i.e.}, able to represent any computable function, though not necessarily in an efficient manner).
 The instruction set includes operations for basic computations, flow control (\textit{e.g.}, conditional logic and looping), input, output, and self-replication.
-% @AML: Outsource the next sentence to a figure!
 % The virtual hardware set includes components such as a central processing unit (CPU) for executing instructions, registers to store values, buffers for inputs and outputs, and memory stacks \citep{ofria_avida:_2009}.
 
 % -- Define reproduction & mutation --
@@ -40,8 +26,6 @@ We repeated our experiments without genome size restrictions and observed qualit
 When an organism divides in Avida, its offspring is placed in a random location on the toroidal grid, replacing any previous occupant.
 For this work, we used the default 60 by 60 grid size, which limits the maximum population size to 3600 organisms.
 As such, improvements to the speed of self-replication are advantageous in the competition for space.
-
-% Avida tracks each organism as it expresses its genome in a given environment in order to measure that organism's phenotype.
 
 % -- Define fitness/metabolic rate/improving replication speed --
 During evolution, organism replication rates improve in two ways: by improving genome efficiency (\textit{e.g.}, using a more compact encoding) or by accelerating the rate at which the genome is expressed (their ``metabolic rate'').
@@ -63,9 +47,6 @@ Phenotypic plasticity in Avida can be adaptive or non-adaptive for a given set o
 Adaptive plasticity shifts net task expression closer to the optimum for the given environments.
 Non-adaptive plasticity changes task expression in either a neutral or deleterious way. 
 Optimal plasticity toggles tasks to always perfectly match the set of rewarded tasks for the given set of environments.
-
-% For the majority of our experiments, we focus on the following 6 one- and two-input logic functions: NOT, NAND, AND, OR-NOT, OR, and AND-NOT. 
-% An organism's \textit{comprehensive} or \textit{aggregate} phenotype is characterized by the set of logic functions performed in each of a set of given environments. 
 
 % \vspace{0.7cm}
 \subsection{Experimental design}
@@ -100,10 +81,8 @@ Each experiment was divided into two phases that each lasted for 200,000 updates
 In phase one of each experiment, we preconditioned populations to their treatment-specific conditions.
 In phase two, we founded new populations with the evolved organisms from phase one and examined their subsequent evolution under given combinations of treatment and experimental conditions.
 During phase two, we tracked each population's evolutionary history as well as saving the full final population.
-Phase one was for pre-conditioning only; all comparisons between treatments were performed on phase two data.
+Phase one was for preconditioning only; all comparisons between treatments were performed on phase two data.
 
-% \vspace{0.25cm}
-\vspace{5mm}
 \subsubsection{Environments}
 \label{sec:methods:experiment:environments}
 
@@ -113,20 +92,9 @@ Phase one was for pre-conditioning only; all comparisons between treatments were
 
 % -- Environment definitions --
 We constructed three experimental environments, abbreviated hereafter as ``ENV-A'', ``ENV-B'', and ``ENV-ALL''.
-Figure [YY] describes these environments based on whether each of six Boolean logic tasks (NOT, NAND, AND, OR-NOT, OR, and AND-NOT) is rewarded or punished.
+Figure \ref{fig:experimental-design} describes these environments based on whether each of six Boolean logic tasks (NOT, NAND, AND, OR-NOT, OR, and AND-NOT) is rewarded or punished.
 A rewarded task performed by an organism doubles their metabolic rate, allowing them to execute twice as many instructions in the same amount of time.
 A punished task halves an organism's metabolic rate. 
-
-
-% --- TODO - Move these descriptions to the figure caption ---
-% In ENV-A, organisms are rewarded for performing NOT, AND, and OR, but are punished for performing the NAND, OR-NOT, and AND-NOT logic tasks.
-% Conversely in ENV-B, organisms are rewarded for performing NAND, OR-NOT, and AND-NOT, but are punished for performing NOT, AND, and OR. 
-% Finally, in ENV-ALL, all six tasks are rewarded and none are punished.
-
-% @AML: Add deleted text to figure caption.
-% Organisms with phenotypes that align with their current environment will quickly outcompete those with mismatched phenotypes.  
-% A perfect match in ENV-A or ENV-B will have a metabolic bonus of $\times{8}$, a perfect mismatch will have a penalty of $\times{0.125}$, and an organism that does no tasks or all tasks will not have a modifier at all. 
-% ------------------------------------------------
 
 % -- Treatment-specific environment details --
 In both the PLASTIC and NON-PLASTIC conditions, the environment cycles between equal-length periods of ENV-A and ENV-B.
@@ -137,20 +105,18 @@ Thus, populations experience a total of 1,000 full periods of ENV-A interlaced w
 Organisms in the PLASTIC treatments differentiate between ENV-A and ENV-B by executing one of six sensory instructions, each associated with a particular logical task; these sensory instructions detect whether their associated task is currently rewarded or punished.
 By using sensory information in combination with execution flow-control instructions, organisms can conditionally perform different logic tasks depending on the current environmental conditions.
 
-\vspace{5mm}
+% \vspace{5mm}
 \subsubsection{Experiment Phase 1 -- Environment preconditioning}
 \label{sec:methods:experiment:phase-one}
-% @AML: if we use 'phase 1' and 'phase 2X' in headings, should we switch all 'phase one' text to 'phase 1' etc?
 
 For each treatment, we founded 100 independent populations from a common ancestral strain capable only of self-replication.
 At the end of phase one, we identified the most abundant (\textit{i.e.}, dominant) genotype and extracted an organism with that genotype from each replicate population to found a new population for phase two.
 
-%The evolution of adaptive phenotypic plasticity is not a guaranteed outcome in phase one of the PLASTIC treatment.
 For the PLASTIC treatment, we measure plasticity by independently testing a given genotype in each of ENV-A and ENV-B.
 We discard phase one populations if the dominant genotype does not exhibit optimal plasticity.
 This approach ensures that measurements taken on PLASTIC-treatment populations during the second phase of each experiment reflect the evolutionary consequences of adaptive plasticity.
 
-\vspace{5mm}
+% \vspace{5mm}
 \subsubsection{Experiment Phase 2A -- Evolutionary change rate}
 \label{sec:methods:exp:evolutionary-change-rate}
 
@@ -159,12 +125,10 @@ Specifically, we quantified evolutionary change rates using four metrics (each d
 (1) coalescence event count,
 (2) mutation count, 
 (3) phenotypic volatility,
-% (4) genotypic fidelity, 
-% (5) phenotypic fidelity,
-and (4) mutational stability.
-We additionally used knockout experiments to examine how the genetic architectures of organisms and their ancestors changed over time.
+and (4) mutational robustness.
+%We additionally used knockout experiments to examine how the genetic architectures of organisms and their ancestors changed over time.
 
-\vspace{3mm}
+% \vspace{3mm}
 \subsubsection{Experiment Phase 2B -- Novel task evolution}
 \label{sec:methods:exp:novel-task-evolution}
 
@@ -173,20 +137,19 @@ The original six phase one tasks (NOT, NAND, AND, OR-NOT, OR, and AND-NOT; herea
 % @CAO: line below can be restored (and reworded) if readers need help with the intuition.
 %As such, in fluctuating environments, the six base tasks continued to fluctuate, but the additional 71 tasks were always rewarded; in static environments, performing any of the 77 logic tasks was always beneficial.
 An organism's metabolic rate was increased by \novelTraitsReward\ for each novel task that it performed (limited to one reward per task).
-This reward provided a selective pressure to evolve these tasks, but their benefits did not overwhelm the 100\% increase conferred by rewarded base tasks. 
+This reward provided a selective pressure to evolve these tasks, but their benefits did not overwhelm the 100\% metabolic rate increase conferred by rewarded base tasks.
 As such, populations in the PLASTIC and NON-PLASTIC treatments could not easily escape environmental fluctuations by abandoning the fluctuating base tasks.
 
 During this experiment, we tracked the extent to which populations evolving under each treatment were capable of acquiring and retaining novel tasks.  
 Specifically, we used three metrics (each described in Table~\ref{tab:metrics-definitions}):
-(1) final novel task count,      % WAS: task performance
-(2) novel task discovery,    % WAS: task discovery
-and (3) novel task loss. % WAS: task loss
+(1) final novel task count, 
+(2) novel task discovery, 
+and (3) novel task loss. 
 
-\vspace{5mm}
+% \vspace{5mm}
 \subsubsection{Experiment Phase 2C -- Deleterious instruction accumulation}
 \label{sec:methods:exp:deleterious-instruction-accumulation}
 
-% Phase 2C extended the conditions of phase 1 by adding a single ``poisonous'' task, which is always harmful in all treatments.
 Phase 2C extended the instruction set of phase one with a \code{poison} instruction.
 When an organism executes a \code{poison} instruction, it performs a ``poisonous'' task, which reduces the organism's metabolic rate (and thus reproductive success) but does not otherwise alter the organism's function.
 We imposed a 10\% penalty each time an organism performed the poisonous task, making the \code{poison} instruction explicitly deleterious to execute.
@@ -195,27 +158,9 @@ We did not limit the number of times that an organism could perform the poisonou
 We tracked the number of times each organism along the dominant lineage performed the poisonous task.
 Specifically, we used two metrics (each described in Table~\ref{tab:metrics-definitions}):
 (1) final poisonous task count,
-and (2) poisonous task acquisition.
+and (2) poisonous task acquisition count.
 
-
-% --- POISON INSTRUCTION LANGUAGE --- 
-% Phase 2C extended the instruction set of phase one with a \code{poison} instruction.
-% When executed by an organism, the \code{poison} instruction reduces the organism's metabolic rate (and thus reproductive success), but does not otherwise alter the organism's function.
-% We imposed a 10\% penalty each time an organism executed the \code{poison} instruction, making the instruction explicitly deleterious.
-% We tracked the number of times a \code{poison} instruction was executed by each genotype along the dominant lineage (including the final dominant genotype).
-% Specifically, we used two metrics (each described in Table~\ref{tab:metrics-definitions}):
-% (1) final \code{poison} count,
-% and (2) lineage \code{poison} count.
-
-% - measurements -
-% @AML: This could get moved to the results?
-% At the beginning of phase two, the \code{poison} instruction is not present in the population as it was not part of the instruction set during the first phase of evolution.
-% However, by adding \code{poison} to the instruction set during phase two, it can be introduced via a mutation.
-% We measured deleterious mutation accumulation by examining the number of times a \code{poison} instruction is executed by each genotype along the dominant lineage (including the final dominant genotype).
-% Because the \code{poison} instruction is explicitly deleterious, selection should purge mutations that increase \code{poison} execution in the offspring phenotype.
-% As such, we expected such mutations to show up in successful lineages either as accumulated cryptic variation in plastic genomes or via hitchhiking with linked beneficial mutations [cite].
-
-\vspace{5mm}
+% \vspace{5mm}
 \subsection{Experimental analyses}
 
 % Evolutionary history
@@ -230,10 +175,6 @@ and (2) poisonous task acquisition.
 % - genetic architectures
 
 
-% TODO - edit descriptions in figure. 
-% TODO - coalescence rate as a metric?
-% TODO - lineage novel task count => lineage novel task discovery? We take a rate for this eventually, and it's awkward to say 'per-generation lineage novel task count'.
-% TODO - lineage poison count => lineage poison increases?
 \input{tex/figures/metrics-definitions}
 
 % naive environment = what organism experiencing
@@ -241,72 +182,28 @@ and (2) poisonous task acquisition.
 
 % - How we extracted representative lineages -
 For each of our experiments, we tracked and analyzed the phylogenetic histories of evolving populations during phase two. 
-For each replicate, we identified an organism with the most abundant genotype in the final evolved population that we used as a representative organism for further analysis.
+For each replicate, we identified an organism with the most abundant genotype in the final evolved population, and we used it as a representative organism for further analysis.
 We then isolated the lineage from the founding organism to the representative organism, which we used as the representative lineage for further analysis.
 We manually inspected evolved phylogenies and found no evidence that any of our experimental treatments supported long-term coexistence. 
 As such, each of the representative lineages reflect the majority of evolutionary history from a given population at the end of our experiment.
-%Because our experimental treatments do not support long-term coexistence, each of these lineages represented the majority of evolutionary history from a given population at the end of our experiment.
 
 % -- PHENOTYPIC PROFILE --
 % DEFINE PHENOTYPIC PROFILE - metric definitions will use this.
-Some of our metrics required us to measure genotype-by-environment interactions.
+Some of our metrics (Table \ref{tab:metrics-definitions}) required us to measure genotype-by-environment interactions.
 Importantly, in the fluctuating environments, we needed to differentiate phenotypic changes that were caused by mutations from those that were caused by environmental changes.
-To accomplish this task, we produced organisms with the focal genotype, measured their phenotype in each environment, and aggregated the resulting phenotypes to create a \textit{phenotypic profile}. 
+To accomplish this, we produced organisms with the given focal genotype, measured their phenotype in each environment, and aggregated the resulting phenotypes to create a \textit{phenotypic profile}. 
 Although organisms with different genotypes may express the same set of tasks across environments, their phenotypic profiles may not necessarily be the same.
-For example, an organism that expresses NOT in ENV-A and NAND in ENV-B has a distinct profile from one that expresses NAND in ENV-A and NOT in ENV-B.
+For example, an organism that expresses NOT in ENV-A and NAND in ENV-B has a distinct phenotypic profile from one that expresses NAND in ENV-A and NOT in ENV-B.
 
-% ---- group editing - BOOKMARK ----
-
-% -- KNOCKOUT EXPERIMENTS --
-% While Avida clearly defines the mechanics of each instruction, the emergent function of an instruction depends on its context within a genome. 
-For an individual organism, we can perform knockout experiments to identify which instructions are responsible for producing a given phenotypic outcome.
-To perform a knockout, we duplicate the organism, replacing a single instruction with an inert ``no-operation'' instruction.
-We then identify any phenotypic changes by contrasting the execution results of the ``knockout'' organism and the original.
-Such changes provide evidence of the role that the original instruction must have played in the genome.
-For example, when an organism performs the NAND task but loses it when an instruction is knocked out, we categorize that instruction as part of the NAND task machinery.
-% @AML: maybe move next sentence to results?
-We use knockout experiments to characterize the role of each instruction in the genomes of every organism along all study lineages, revealing how genetic architectures change over time.
+% -- GENETIC MANIPULATION / MUTATIONAL NEIGHBORHOOD -- 
+% How do we produce mutants for analyses?
+While most analyses employed here are retrospective metrics applied to lineages, digital evolution allows precise manipulations on individual organisms and genomes. 
+Mutational robustness uses this technique when looking at the possible mutations on a representative genotype. 
+Genomes in Avida are linear sequences of instructions, and as such possible mutations can be simulated by swapping these instructions. 
+Indeed, the mutational robustness of a genotype examines all one-step mutations (\textit{i.e.}, each mutation where exactly one instruction is substituted). 
+This allows us the disentangle whether results of the lineage metrics are a consequence of evolved genetic architectures or purely the results of selection. 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% - Measuring evolutionary change -
-% We quantified rates of evolutionary change using the following four metrics (Box \ref{box:metrics}):
-% (1) number of \textbf{coalescence events} that have occurred, which indicates the frequency of selective sweeps in the population;
-% (2) \textbf{mutation accumulation}, which is the sum of all mutations that have occurred along a lineage;
-% (3) \textbf{phenotypic volatility}, which is the number of instances where parent and offspring phenotypes do not match along a lineage, as measured under a given condition;
-% and (4) \textbf{mutational stability}, which is the proportion of \textit{mutated} offspring along a lineage whose phenotypes do not match that of their parent, as measured under a given condition.
-
-% - Methods for computing volatility -
-% To calculate phenotypic volatility for a given lineage, we expressed (i.e., evaluated) each genotype along that lineage in a treatment-specific condition, and we summed the number of changes in task profiles between consecutive genotypes.
-% For lineages evolved in environments fluctuating between ENV-A and ENV-B, we evaluate genotypes in both environmental conditions and count only changes in its \textit{aggregate} phenotype; this technique ensures that environmentally-induced changes are excluded from our measurement.
-% Phenotypic volatility as defined here illuminates the rate at which accumulated genetic changes actually change the phenotype along a lineage.
-
-% - Methods for computing mutational stability
-% We measured mutational stability as the fraction of mutated offspring along a given lineage with a different phenotype than their parent.
-% For lineages evolved in fluctuating environments, we evaluated mutants under both ENV-A and ENV-B and counted all changes in the \textit{aggregate} task profile; like our measure of phenotypic volatility, this technique ensures that environmentally-induced changes are excluded from our measurement.
-% Mutational stability examines the frequency at which mutations effect changes in an offspring's phenotype.
- 
-% In experiments that introduce novel tasks during phase two, we measured task discovery, task performance, and task loss along representative lineages.
-% \textbf{Task discovery} measures a given lineage's level of \textit{exploration} of the fitness landscape (i.e., the mapping between genetic space and phenotype space) \citep{canino-koning_fluctuating_2019}. 
-% We calculated task discovery as the total number of unique tasks ever performed along the lineage, even if a task is later lost; as such, a lineage's task discovery measurement ranged from 0 to 71.
-
-% \textbf{Task performance} measures the level of \textit{exploitation} of the fitness landscape at a given point in time.
-% In this work, we summarized task performance using a count of unique tasks completed by a representative organism from each population.
-% We focused on an organism from the dominant genotype at the end of the experiment as the most representative phenotype in the evolved population.
-
-% \textbf{Task loss} measures how often a lineage fails to retain evolved traits over time and thus indicates the ability for traits to be maintained over time.
-% We calculated task loss as the number of times along a lineage that a task is performed by a parent but not its offspring. 
-
-% \textbf{Final poison count}...
-
-% \textbf{Lineage poison count}...
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-% \vspace{0.5cm}
-\vspace{5mm}
 \subsection{Statistical analyses}
 
 Across all of our experiments, we differentiated between sample distributions using non-parametric statistical tests.
@@ -315,7 +212,6 @@ determine if there were significant differences in results from the PLASTIC, NON
 If so, we applied a Wilcoxon rank-sum test \citep{kotz_individual_1992} to distinguish between pairs of treatments.
 We applied Bonferroni corrections for multiple comparisons \citep{rice_analyzing_1989} where appropriate.
 
-\vspace{5mm}
 \subsection{Software availability}
 
 We conducted our experiments using a modified version of the Avida software, which is open source and freely available on \href{https://github.com/amlalejini/evolutionary-consequences-of-plasticity}{GitHub} \citep{supplemental_material}.
